# claude-call

./: .env.example  .gitignore  README.md  aec_bridge.swift  audio_meter.py  brain.py  build.sh  call.ps1  call.py  call.sh  config.py  configure.py  controls.py  doctor.py  echo_gate.py  extras_mac_aec.py  hotkey.py  install.ps1  install.sh  pyproject.toml  session.py  sounds.py  stt.py  transcript.py  tts.py  ui.py  voice_hook.py
.github/workflows/: ci.yml
scripts/: download-model.ps1  download-model.sh
tests/: test_core.py  test_smoke.py
