[project]
name = "claude-call"
version = "0.1.0"
description = "Talk to your Claude Code by voice — a real phone call with your terminal agent."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "pipecat-ai[silero,local]>=1.3",
    "edge-tts>=7.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "rich>=15.0.0",
    "google-auth>=2.55.0",
    "requests>=2.34.2",
    "pynput>=1.8.2",
]

[tool.uv]
package = false
